cluster/media/jellyseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5055
  selector:
    app: jellyseerr
