cluster/media/jellyseerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  annotations:
    nginx.ingress.kubernetes.io/enable-global-auth: 'false'
spec:
  ingressClassName: external
  rules:
    - host: requests.sko.ai
      http:
        paths:
          - backend:
              service:
                name: jellyseerr
                port: 
                  number: 80
            path: /
            pathType: Prefix
